--- a/presensi_app/pubspec.yaml
+++ b/presensi_app/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   syncfusion_flutter_maps: ^28.2.12
   http: ^1.3.0
   shared_preferences: ^2.5.2
+  flutter_local_notifications: ^19.0.0
+  timezone: ^0.10.0
 
 dev_dependencies:
   flutter_test:
@@ -56,6 +58,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - assets/images/logo_rs.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
